--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "release": "semantic-release"
   },
   "peerDependencies": {
-    "react": "^16 || ^17 || ^18",
-    "react-dom": "^16 || ^17 || ^18"
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
