--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "prepare": "husky install",
     "dev": "vite",
     "lint": "tsc",
+    "test": "run-p test:*",
+    "test:unit": "jest",
     "build": "run-p build:*",
     "build:scripts": "vite build",
     "build:types": "dts-bundle-generator --no-banner --external-imports=react -o dist/index.d.ts lib/index.ts",
@@ -32,6 +34,11 @@
     "@commitlint/cli": "^13.1.0",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.1",
+    "@swc/core": "^1.2.88",
+    "@swc/jest": "0.1.5",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.0",
+    "@types/jest": "^27.0.1",
     "@types/node": "^16.9.4",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -41,6 +48,7 @@
     "cz-emoji": "^1.3.1",
     "dts-bundle-generator": "^5.9.0",
     "husky": "^7.0.2",
+    "jest": "^27.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
