:recycle:  Set setupFile to jest

--- a/jest.config.json
+++ b/jest.config.json
@@ -9,7 +9,8 @@
       },
       "moduleNameMapper": {
         "^@/(.*)$": "<rootDir>/lib/$1"
-      }
+      },
+      "setupFilesAfterEnv": ["<rootDir>/tests/setup/jest_dom.ts"]
     },
     {
       "displayName": "node",
