--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@swc/jest": "0.1.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.0",
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.9.4",
     "@types/react": "^17.0.0",
