--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,6 +88,31 @@ jobs:
       - name: Test
         run: yarn test
 
+      - uses: actions/upload-artifact@v2
+        with:
+          name: coverage
+          path: coverage/clover.xml
+
+  report-coverage:
+    needs: test
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - uses: actions/download-artifact@v2
+        with:
+          name: coverage
+
+      - uses: codecov/codecov-action@v1
+        with:
+          files: coverage/clover.xml
+
   build:
     needs: [setup]
     runs-on: ${{ matrix.os }}
